# ansible-role-wordpress

./: .yamllint  Vagrantfile  pyproject.toml
defaults/: main.yml
meta/: main.yml
tasks/: apache.yml  main.yml
templates/: apache-vhost.conf.j2
tests/: test.yml
