[tool.poetry]
name = "ansible-role-wordpress"
version = "0.1.0"
authors = ["Lycheejam <lycheejamwow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ansible = "^2.9"
jinja2 = "^2.11"
pyyaml = "^5.3"
argcomplete = "^1.11"
yamllint = "^1.23"
ansible-lint = "^4.2"
pre-commit = "^2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
